--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "protobufjs": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "https://github.com/EduardoRFS/types-node.git",
     "body-parser": "^1.15.2",
     "electron-mocha": "^3.1.1",
     "express": "^4.14.0",
